# hallo-tag-enricher-ai-be

./: .env.example  .gitignore  .replit  README.md  TELEMETRY_USAGE.md  analyze_logs.py  api_server.py  pyproject.toml  replit.md  sample_human_review.py  sync_to_airtable.py  test_api.py  test_enhancements.py  test_ensemble.py  test_lecturer_bio.py  test_scoring_modes.py  test_v2_format.py  validate_setup.py  view_results.py  web_viewer.py
attached_assets/: Pasted---1760894165676_1760894165680.txt  Pasted--Strengths-of-Your-Prompting-Approach-1-System-Message-Context-Is-Well-Defined-The-system-pro-1762088001002_1762088001002.txt  Pasted--labels-id-recw4C6wGBCQEYki4-active-true-name-he--1763010263272_1763010263272.txt  Pasted--labels-id-recw4C6wGBCQEYki4-active-true-name-he-category-id-recd99-1761749782582_1761749782582.txt  Pasted--role-system-content--1762158735753_1762158735755.txt  Pasted--role-system-content--1762159030329_1762159030330.txt  Pasted-1-Status-flow-audit-trail-Your-plan-pending-approved-rejected-synced-keep-history-Issu-1760871673347_1760871673347.txt  Pasted-AI-Tag-Enrichment-One-Off-Batch-Hebrew-Tag-IDs-Background-what-we-already-have-You-operate-a-1760861006092_1760861006093.txt  Pasted-Confidence-gate-is-too-strict-You-scale-confidences-by-0-85-and-then-require-0-80-That-means-the--1763005845113_1763005845114.txt  Pasted-Goal-Create-a-small-candidate-list-20-25-tags-per-lecture-that-still-contains-all-truly-relevant-1760866534529_1760866534529.txt  (+7 more)
src/: ai_call_logger.py  airtable_sync.py  category_reasoning.py  config.py  csv_parser.py  database.py  (+17 more)
(+3 files in other folders)
