[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.3.4",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "replit>=4.1.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
